kubernetes-ingress/splitwise-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitwise-api-service
spec:
  type: ClusterIP
  selector:
    app: splitwise-api
  ports:
    - port: 80
      targetPort: 80
